<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/atendimentocertidoes" tools:context=".MainActivity">

    <Button
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/cp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="120dp"
        android:background="@drawable/certprox"
        android:onClick="onCPClicked"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/cr"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/rep"
        android:onClick="onCRClicked"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/pp"
        android:layout_alignTop="@+id/cp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/prefprox"
        android:onClick="onPPClicked"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/pr"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/reppref"
        android:onClick="onPRClicked"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/auto"
        android:background="@drawable/automatico"
        android:onClick="onAutoClicked"
        android:layout_above="@+id/textView3"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/espera"
        android:id="@+id/textView6"
        android:textColor="#ffb4ccd8"
        android:textSize="30sp"
        android:layout_above="@+id/pesp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/cespera"
        android:id="@+id/cesp"
        android:textSize="60sp"
        android:textColor="#ffabb977"
        android:layout_below="@+id/textView6"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/pespera"
        android:id="@+id/pesp"
        android:textSize="60sp"
        android:textColor="#fffdf337"
        android:layout_above="@+id/auto"
        android:layout_alignRight="@+id/textView6"
        android:layout_alignEnd="@+id/textView6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ctotal"
        android:id="@+id/textView"
        android:textColor="#ff85c994"
        android:textSize="20sp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ptotal"
        android:id="@+id/textView2"
        android:textColor="#fffdf112"
        android:textSize="20sp"
        android:layout_alignBottom="@+id/pr"
        android:layout_alignRight="@+id/textView3"
        android:layout_alignEnd="@+id/textView3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ultimo"
        android:id="@+id/textView3"
        android:textColor="#ffb4ccd8"
        android:textSize="30sp"
        android:layout_above="@+id/textView"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
